# CSG-IEEERoboticsSoc-robot

./: .gitignore  .gitmodules
avr/: CMakeLists.txt  freertos-lib.cmake
avr/cmake/: cmaw-fastled.cmake  cmaw-lib.cmake  cmaw-libprintf.cmake  cmaw-mpu6050.cmake
avr/src/: drive.cpp  drive.h  infrared.cpp  infrared.h  main.cpp  main.h  motor_controller.cpp  motor_controller.h  mpu_controller.cpp  mpu_controller.h  pid.cpp  pid.h  pid_consumer.cpp  pid_consumer.h  pixel.cpp  pixel.h
avr/wokwi-sim/: diagram.json  wokwi-api.h  wokwi.toml
avr/wokwi-sim/chips/: CMakeLists.txt  tb6612fng.chip.c  tb6612fng.json
